--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.ico" />
     <title>Portfolio</title>
     <!-- Link to fonts  -->
     <link
@@ -27,7 +30,7 @@
     <!-- Link to css  -->
     <link
       rel="stylesheet"
-      href="./css/styles.css" />
+      href="./styles.css" />
   </head>
 
   <body>
@@ -60,7 +63,7 @@
         <button
           class="burger-btn"
           type="button"
-          data-modal-open-mobile-pf>
+          data-modal-open="menu">
           <svg
             class="burger-icon"
             width="32"
@@ -392,12 +395,12 @@
     <!-- Modal mobile  -->
     <div
       class="backdrop is-hidden"
-      data-modal-mobile-pf>
+      data-modal="menu">
       <div class="modal-mobile">
         <button
           type="button"
           class="modal-close-btn modal-close-btn-mobile"
-          data-modal-close-mobile-pf>
+          data-modal-close>
           <svg
             class="modal-close-icon modal-close-icon-mobile"
             width="8"
@@ -409,14 +412,14 @@
           <ul class="nav-list-links-mobile list">
             <li class="nav-list-item-mobile">
               <a
-                class="nav-link-mobile link active"
+                class="nav-link-mobile link"
                 href="./index.html"
                 >Studio</a
               >
             </li>
             <li class="nav-list-item-mobile">
               <a
-                class="nav-link-mobile link"
+                class="nav-link-mobile link active"
                 href="./portfolio.html"
                 >Portfolio</a
               >
@@ -494,6 +497,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
-    <script src="./js/modal-mobile.js"></script>
+    <script src="./modal.js"></script>
   </body>
 </html>
