fix: add correct paths to images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Link to css  -->
     <link
       rel="stylesheet"
-      href="./styles.css" />
+      href="./css/styles.css" />
   </head>
 
   <body>
